ecmascript/parser/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/propertyNamedConstructor/input.ts.stderr
error: Classes may not have a non-static field named 'constructor'
 --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/propertyNamedConstructor/input.ts:2:3
  |
2 |   "constructor" = 3; // Error
  |   ^^^^^^^^^^^^^

